hphp/hack/test/typecheck/reserved_name16.php.exp
File "reserved_name16.php", line 5, characters 7-14:
Resource cannot be used as it is reserved. (Naming[2068])
