hphp/hack/test/typecheck/reserved_name16.php
<?hh

namespace Foo;

class Resource {}
